--- a/aula4/index.html
+++ b/aula4/index.html
@@ -15,40 +15,9 @@
     <main>
         <section>
             <input type="text" placeholder="Digite sua busca">
-            <button>Pesquisar</button>
+            <button onclick="search()">Pesquisar</button>
         </section>
         <section class="resultados-pesquisa" id="resultados-pesquisa">
-            <!-- <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">Akatsuki no Yona</a>
-                </h2>
-                <p class="descricao-meta">
-                    5 estrelas. Harem inverso, romance, fantasia, historico. Yona é uma personagem cativante e seus
-                    parceiros são apaixonantes. Apesar do genero, o anime ainda assim tem um romance sólido.
-                </p>
-                <a href="https://www.crunchyroll.com/pt-br/series/G6VN35J7R/yona-of-the-dawn?srsltid=AfmBOoq8oD-PJKmhfeRn92TGZaX4akeQ9OFmWuLxXeRCGjLwN84Db5J-"
-                    target="_blank">Assistir agora</a>
-            </div>
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">Haikyuu</a>
-                </h2>
-                <p class="descricao-meta">
-                    5 estrelas. Esporte, slice of life. Envolvente e emocionante, depois de começar nã consegue largar. Impossível não se apegar a todos os personagens.
-                </p>
-                <a href="https://www.crunchyroll.com/pt-br/series/GY8VM8MWY/haikyu?srsltid=AfmBOorrtSSBRB_FT-7L0HR5SFt8-7vBjhSVlxnKfXmr4SMQvUMDo26Y"
-                    target="_blank">Assistir agora</a>
-            </div>
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">Jujutsu Kaisen</a>
-                </h2>
-                <p class="descricao-meta">
-                    5 estrelas. Ação, fantasia, terror leve. História extremamente envolvente, belos visuais, trama interessante. Anime main stream de alta qualidade.
-                </p>
-                <a href="https://www.crunchyroll.com/pt-br/series/GRDV0019R/jujutsu-kaisen"
-                    target="_blank">Assistir agora</a>
-            </div> -->
         </section>
     </main>
     <footer>
@@ -56,8 +25,8 @@
         <p>github: mariadesu</p>
     </footer>
 
-    <script src="app.js"></script>
     <script src="dados.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
